# Qt6Sample

./: .gitignore  CMakeLists.txt  CMakePresets.json
GSB-TerminalBeauty/: TerminalBeauty.h
Qt6Test/: CmakeLists.txt  app_win32.rc  main.cpp  main.h
Qt6Test/MainWindow/: mainwindow.cpp  mainwindow.h  mainwindow.ui
